# audit-platform-main

./: .env.example  .gitignore  AGENTS.md  AGENT_TEST_GUIDE.md  AUTOMATIONS_SETUP.md  CHANGELOG.md  CURSOR_GITHUB_SETUP.md  DEPLOYMENT.md  GIT_WORKFLOW.md  README.md  apce20260616  create-desktop-shortcut.ps1  debug-audit-task-create-error.md  debug-auto-period-step3.md  debug-daybook-step3-performance.md  debug-parser-engine-unification.md  debug-period-review-loss.md  debug-sequence-import-parser.md  debug-step5-review-export.md  diag_service.py  docker-compose.yml  finance_audit.db  full_test.py  package.json  pnpm-lock.yaml  pytest_result.txt  restart-services.bat  restart-services.ps1  tatus --short  test_ledger.csv  upload_test.py  verify_test.py
backend/: .env  TECH_DEBT.md  _test_import.py  _test_imports.py  alembic.ini  finance_audit.db  pyproject.toml  pytest_full_result.txt  pytest_result_final.txt  pytest_summary.txt  test_daybook.csv  test_llm_fix.py  test_result.txt
backend/.dbg/: parser-engine-unification.env  project-health-check.env  trae-debug-log-parser-engine-unification.ndjson  trae-debug-log-project-health-check.ndjson
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_ledger_id_to_import_jobs.py  0003_add_lifecycle_log_metadata.py  0004_add_entry_trace_fields.py  0005_add_parent_team_id.py  0006_add_entity_id_to_accounting_units.py  0007_add_register_ledger_scope.py  0008_bank_reconciliation.py  0009_counterparty_confirmation.py  0010_workpaper_version.py  0011_audit_workflow.py  0012_entry_post_status.py  0013_audit_collaboration_workflow.py  0013_chart_of_accounts_ledger_scope.py  0014_audit_task_ledger_required.py  0014_workpaper_collaboration_package.py  0015_add_draft_data_to_import_jobs.py  0016_add_user_platform_role.py  0017_ledger_primary_boundary_refactor.py  0018_add_entity_legal_type.py  0019_add_voucher_table.py  0020_add_period_id_and_attachment_count_to_vouchers.py  0021_enhanced_entry_tags.py  0022_add_parse_quality_metrics.py  0023_structured_import_staging.py  (+4 more)
backend/app/: main.py
backend/config/: account_tag_rules.yaml  coa_code_rules.json
backend/docs/: CHANGELOG_MODEL_ENHANCEMENT.md  ENTRY_TAGS_API.md  bookkeeping-v1-decision-record.md  datetime_code_review_standard.md  engine-architecture.md  fixed-asset-register-schema-draft.md  fixed-asset-v1-decision-record.md  tag-vs-account-hierarchy.md
backend/finance_vector_audit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/qdrant_local_storage/: meta.json
backend/scripts/: _check_prod_jobs.py  _prod_db_query.py  _prod_process_debug.py  cleanup_legacy_entries.py  end_to_end_accounting_closure.py  local_prod_api_regression.py  prod_api_regression_daybook.py  prod_regression_daybook.py  run_l6_smoke_a10_a11.py  run_nightly_parser_evolution.py  run_parser_evolution.py  smoke_api.py  top3_contract_deep.py  top3_field_discovery.py  verify_voucher_system.py
backend/tests/: conftest.py  test_account_tag_resolution.py  test_accounting_period_api.py  test_accounting_period_close_loop.py  test_accounting_period_service.py  test_accounting_units_api.py  test_adaptive_import_engine_acceptance.py  test_agent_api.py  test_agent_assist_api.py  test_agent_llm_api.py  test_app.py  test_audit_day_book_api.py  test_audit_day_book_import.py  test_audit_export.py  test_audit_report_service.py  test_audit_snapshot_import.py  test_audit_tests_api.py  test_audit_workflow_api.py  test_auth_api.py  test_auto_tagging_and_analytics.py  test_bank_api.py  test_bank_reconciliation_draft.py  test_basic_data_api.py  test_binding_requests_api.py  test_business_cycles_api.py  test_cash_flow_presentation_service.py  test_charset_detection.py  test_classic_report_layout_service.py  test_coa_code_config.py  test_coa_gap_mapping_service.py  test_compliance_llm_vector.py  test_confirmation_api.py  test_contract_parser_service.py  test_contract_validation_service.py  test_contract_validation_service_compliance.py  test_counterparties_api.py  test_dashboard_api.py  test_day_book_continuation_parse.py  test_day_book_duplicate_lines.py  test_day_book_parser.py  (+78 more)
(+852 files in other folders)
