[project]
name = "finance-vector-audit-backend"
version = "0.1.0"
description = "Finance voucher import and vector audit risk backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "openpyxl>=3.1.4",
  "pdfplumber>=0.11.0",
  "qdrant-client>=1.9.1",
  "httpx>=0.27.0",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1",
  "alembic>=1.13.0",
  "pytest>=8.2.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
