[project]
name = "finance-vector-audit-backend"
version = "0.1.0"
description = "Finance voucher import and vector audit risk backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "openpyxl>=3.1.4",
  "pdfplumber>=0.11.0",
  "qdrant-client>=1.9.1",
  "httpx>=0.27.0",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1",
  "alembic>=1.13.0",
  "pytest>=8.2.0",
  "opencv-python>=4.9.0",
  "numpy>=1.26.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
show_error_context = true
pretty = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

ignore_missing_imports = true
follow_imports = "silent"

exclude = [
    "tests/",
    "migrations/",
    "alembic/",
]

# 临时注释掉模块级别 strict=false，启用严格模式进行批量修复
# [[tool.mypy.overrides]]
# module = "app.*"
# strict = false
# 
# [[tool.mypy.overrides]]
# module = "app.core.*"
# strict = false
# 
# [[tool.mypy.overrides]]
# module = "app.api.*"
# strict = false
# 
# [[tool.mypy.overrides]]
# module = "app.services.*"
# strict = false
# 
# [[tool.mypy.overrides]]
# module = "app.models.*"
# strict = false
# 
# [[tool.mypy.overrides]]
# module = "app.db.*"
# strict = false