[project]
name = "finance-vector-audit-backend"
version = "0.1.0"
description = "Finance voucher import and vector audit risk backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "openpyxl>=3.1.4",
  "xlrd>=2.0.1",
  "python-docx>=1.1.0",
  "pdfplumber>=0.11.0",
  "qdrant-client>=1.9.1",
  "httpx>=0.27.0",
  "python-jose>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<4.1",
  "alembic>=1.13.0",
  "tenacity>=8.2.0",
  "charset-normalizer>=3.3.2",
  "reportlab>=4.2.0",
]

[project.optional-dependencies]
# 印章检测/抠图（传统 CV，非 ML）
vision = [
  "opencv-python-headless>=4.9.0",
  "numpy>=1.26.0",
]
# 印章/图片 OCR 识字（会拉 torch，仅按需安装）
ocr = [
  "easyocr>=1.7.0",
]
# PostgreSQL（云上 SQLite 默认可不装）
pg = [
  "psycopg[binary]>=3.1.19",
]
dev = [
  "pytest>=8.2.0",
  "psycopg[binary]>=3.1.19",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.mypy]
python_version = "3.13"
strict = true
show_error_codes = true
show_error_context = true
pretty = true
warn_unused_configs = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

ignore_missing_imports = true
follow_imports = "silent"

exclude = [
    "tests/",
    "migrations/",
    "alembic/",
]
